<resources>
    <string name="app_name">ScooterO</string>
    <string name="choose_lang">Choose Language</string>
    <string name="verification_title">Verification</string>
    <string name="verification_desc">Verify your mobile number by entering the One Time Password - OTP which is sent to the given number</string>
    <string name="payment_title">Payments</string>
    <string name="payment_desc">Add your credit or debit cards to pay and ride the scooter instantly. We have multiple secured payment options</string>
    <string name="unlock_title">Unlock Scooters</string>
    <string name="unlock_desc">Unlock your scooter by just scanning the secured QR code through ScooterO application</string>
    <string name="ride_title">Ride Time</string>
    <string name="ride_desc">Easily track your start &amp; end time using our time tracking feature</string>
    <string name="skip">Skip</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="mobno">Enter mobile number</string>
    <string name="password">Enter password</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="or">OR</string>
    <string name="newuser">New user?</string>
    <string name="register">Register</string>
    <string name="registration">Registration</string>
    <string name="haveaccount">Already have an account?</string>
    <string name="name">Enter your name</string>
    <string name="email">Enter email address</string>
    <string name="dob">Date of birth</string>
    <string name="gender">Gender</string>
    <string name="otpverification">OTP Verification</string>
    <string name="verify">Verify</string>
    <string name="changenumber">Change Mobile Number</string>
    <string name="contactsupport">Contact Support</string>
    <string name="tryagain">Try Again</string>
    <string name="otpsuccess">Your mobile number is verified &amp; your account is registered successfully...</string>
    <string name="otpfailure">Your mobile number verification has failed. Please try again or change your mobile number...</string>
    <string name="supporttitle">Please write to us about the issue which you are facing</string>
    <string name="supporthint">Provide us some details about the issue</string>
    <string name="submit">Submit</string>
    <string name="generateOTP">Generate OTP</string>
    <string name="enterqr">Enter QR</string>
    <string name="enterbarcode">Enter the QR Code</string>
    <string name="unlock_scooter">Unlock Scooter</string>
    <string name="invoice">Invoice</string>
    <string name="mobilenohint">Enter present mobile number</string>
    <string name="changemail">Change Email ID</string>
    <string name="emailhint">Enter present email ID</string>
    <string name="payment_method">Payment Method</string>
    <string name="nopaymentmethod">It seems you don\'t have any payment methods added. Please add payment method to start the ride...</string>
    <string name="addpaymentmethod">Add Payment Method</string>
    <string name="creditcard">Credit Card</string>
    <string name="debitcard"><![CDATA[Debit Card & Pre-Paid]]></string>
    <string name="scooterowallet">ScooterO Wallet</string>
    <string name="btncontinue">Continue</string>
    <string name="addcreditcard">Add Credit Card</string>
    <string name="nameoncard">Name on the card</string>
    <string name="nameoncardhint">Name as printed on card</string>
    <string name="cardnumber">Card Number</string>
    <string name="cardnohint">* * * *</string>
    <string name="expiry">Expiry</string>
    <string name="cvv">CVV</string>
    <string name="cvvhint">*  *  *</string>
    <string name="add">Add</string>
    <string name="payment">Payment</string>
    <string name="paydebitcard">Pay through Debit Card</string>
    <string name="pay">Pay</string>
    <string name="profile">Profile</string>
    <string name="nametitle">Name</string>
    <string name="chooserideplan">Choose Ride Plan</string>
    <string name="totalriderent">Total ride rent</string>
    <string name="unlock_charge">Unlock charge</string>
    <string name="subtotal">Sub Total</string>
    <string name="vat">VAT(15%)</string>
    <string name="grand_total">Grand Total</string>
    <string name="payride"><![CDATA[Pay & Ride]]></string>
    <string name="recharge">Recharge</string>
    <string name="chooseridetime">Choose Ride Time</string>
    <string name="wallet">Wallet</string>
    <string name="available_balance">Available Balance</string>
    <string name="credited">Credited</string>
    <string name="debited">Debited</string>
    <string name="type">Type</string>
    <string name="amount">Amount</string>
    <string name="source">Source</string>
    <string name="card">Card</string>
    <string name="date">Date</string>
    <string name="txnno">Txn.No</string>
    <string name="settings">Settings</string>
    <string name="changepassword">Change Password</string>
    <string name="ride_rent">Ride Rent</string>
    <string name="ride_payment">Ride Payment</string>
    <string name="ride_distance">Ride Distance</string>
    <string name="starttime">Start Time</string>
    <string name="endtime">End Time</string>
    <string name="report">Report</string>
    <string name="report_summary">if you have any issues</string>
    <string name="plan_purchased">Plan Purchased</string>
    <string name="paid_amount">Paid Amount</string>
    <string name="utilized_time">Utilized Time</string>
    <string name="remaining_time">Remaining Time</string>
    <string name="remaining_amount">Remaining amount\nadded in the wallet</string>
    <string name="ride_details">Ride Details</string>
    <string name="scooterno">Scooter SI.No</string>
    <string name="tripno">Trip Number</string>
    <string name="share_invoice">Share Invoice</string>
    <string name="invoice_details">Invoice Details</string>
    <string name="feedbackquestion">How did you enjoy your ride</string>
    <string name="feedbacktitle">Provide your feedback</string>
    <string name="feedbackhint">Enter your feedback here...</string>
    <string name="added_cards">Added Cards</string>
    <string name="newcard">Add New Card</string>
    <string name="scan">Scan to Ride</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="selectgender">Select gender:</string>
    <string name="title_activity_dashboard">Map</string>
    <string name="registration_desc">Register yourself as a ScooterO user by entering few details like mobile number and email ID and etc…</string>
    <string name="resend">Resend OTP</string>
    <string name="scooteroride">ScooterO Ride</string>
    <string name="distance">Distance</string>
    <string name="ride_time">Riding Time</string>
    <string name="endride">End Ride</string>
    <string name="current_password">Enter current password</string>
    <string name="new_password">Enter new password</string>
    <string name="confirm_password">Confirm new password</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home"></string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hi">Hi</string>
    <string name="unlocks">Unlocks</string>
    <string name="minutes">Minutes</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="help">Help</string>
    <string name="promocode">Promo Code</string>
    <string name="logout">Logout</string>
    <string name="ack_update_profile">The details which you changed has been updated successfully</string>
    <string name="manual_barcode">Enter Barcode</string>
    <string name="ride_range">Ride Range</string>
    <string name="rideendalert">Your ride time is expired.\nAdd money to continue your ride...</string>
    <string name="endridemsg">Park the scooter safe</string>
    <string name="endridemsg_1">Please park the scooter safely beside the road. Wrong parking may leads you to traffic violence...</string>
    <string name="okay">Okay</string>
    <string name="ack_ride_complete">Your payment for the ride has been completed. You can check the ride cost in invoice section.</string>

    <string name="checkout_ui_callback_scheme">checkoutui</string>
    <string name="payment_button_callback_scheme">paymentbutton</string>
    <string name="custom_ui_callback_scheme">customui</string>

    <string name="checkout_ui_title">Ready-to-Use UI</string>
    <string name="payment_button_title">Payment Button</string>
    <string name="custom_ui_title">SDK &amp; Your Own UI</string>
    <string name="checkout_immediately_with">Checkout immediately with</string>
    <string name="sdk_version_number">mobile sdk v%s</string>
    <string name="visa">VISA</string>

    <string name="card_holder_hint">Card Holder</string>
    <string name="card_number_hint">Card Number</string>
    <string name="card_expiry_month_hint">MM</string>
    <string name="card_expiry_year_hint">YY</string>
    <string name="card_cvv_hint">CVV</string>

    <string name="date_delimiter">/</string>

    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_proceed_to_checkout">PROCEED TO CHECKOUT</string>
    <string name="button_pay_now">PAY NOW</string>

    <string name="message_successful_payment">The payment was successful</string>
    <string name="message_unsuccessful_payment">"The payment was unsuccessful"</string>
    <string name="message_payment_confirmation">Payment of %1$s %2$s will be executed</string>

    <string name="progress_message_please_wait">Please wait…</string>
    <string name="progress_message_checkout_id">Getting the checkout id…</string>
    <string name="progress_message_checkout_info">Getting the checkout info…</string>
    <string name="progress_message_payment_status">Getting the payment status…</string>
    <string name="progress_message_processing_payment">Processing payment…</string>

    <string name="error_message">An error occurred</string>
    <string name="error_empty_fields">The fields must not be empty</string>

</resources>