<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_green">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/imgBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_close_white"
                android:layout_marginLeft="@dimen/_5sdp"/>
            <TextView
                android:id="@+id/txtHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/recharge"
                style="@style/SOHeader"/>
            <TextView
                android:id="@+id/txtAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/_5sdp"
                android:text="23.48SAR"
                android:fontFamily="@font/montserrat_medium"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp"/>
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:text="@string/payment"
        style="@style/SOTitle"/>
    <LinearLayout
        android:id="@+id/llSegment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_margin="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/txtTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/btnAddedCards"
            android:layout_width="205dp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginRight="-20dp"
            android:layout_weight="1"
            android:background="@drawable/bg_segment_active"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/added_cards"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:translationZ="@dimen/_5sdp" />

        <Button
            android:id="@+id/btnNewCard"
            android:layout_width="0dp"
            android:layout_height="@dimen/_30sdp"
            android:layout_weight="1"
            android:background="@drawable/bg_segment_inactive"
            android:text="@string/newcard"
            android:textSize="12sp"
            android:fontFamily="@font/montserrat_semibold"
            android:textColor="@color/font_color_2"
            android:textAllCaps="false"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rclCards"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llSegment"
        app:layout_constraintBottom_toTopOf="@+id/btnPay"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"/>

    <Button
        android:id="@+id/btnPay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="@dimen/_15sdp"
        android:text="@string/pay"
        style="@style/SOButton"/>
</androidx.constraintlayout.widget.ConstraintLayout>