<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/light_green"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/imgBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back"
                android:layout_marginLeft="@dimen/_5sdp"/>
            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/changemail"
                style="@style/SOHeader"/>
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <EditText
        android:id="@+id/edtEmailId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:layout_margin="@dimen/_10sdp"
        android:inputType="textEmailAddress"
        android:background="@drawable/bg_edt"
        android:padding="@dimen/_8sdp"
        android:fontFamily="@font/montserrat_medium"
        android:hint="@string/emailhint"
        android:maxLines="1"/>
    <Button
        android:id="@+id/btnGenerateOTP"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/generateOTP"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtEmailId"
        android:layout_margin="@dimen/_10sdp"
        style="@style/SOButton"
        android:padding="@dimen/_5sdp"/>

</androidx.constraintlayout.widget.ConstraintLayout>