<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/forgot_pass"
        style="@style/SOTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/llMobNo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView4"
        android:background="@drawable/bg_edt"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="@dimen/_10sdp">
        <ImageView
            android:layout_width="0dp"
            android:layout_height="16dp"
            android:layout_weight="0.10"
            android:src="@drawable/ic_phone"
            android:layout_gravity="center"/>
        <EditText
            android:id="@+id/edtMobNo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:layout_weight="0.80"
            android:padding="@dimen/_3sdp"
            android:fontFamily="@font/montserrat_medium"
            android:inputType="number"
            android:maxLength="10"
            android:hint="@string/mobno"/>
    </LinearLayout>
    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/generateOTP"
        style="@style/SOButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llMobNo" />
</androidx.constraintlayout.widget.ConstraintLayout>