<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_green_1">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/imgBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back"
                android:layout_marginLeft="@dimen/_5sdp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/changepassword"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="@dimen/_13sdp"/>
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:orientation="horizontal"
            android:background="@drawable/bg_edt"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp">
            <ImageView
                android:layout_width="0dp"
                android:layout_height="16dp"
                android:layout_weight="0.15"
                android:src="@drawable/ic_password"
                android:layout_gravity="center"/>
            <EditText
                android:id="@+id/edtCurrentPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:layout_weight="0.80"
                android:padding="@dimen/_3sdp"
                android:textSize="16sp"
                android:fontFamily="@font/montserrat_medium"
                android:inputType="textPassword"
                android:hint="@string/current_password"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:orientation="horizontal"
            android:background="@drawable/bg_edt"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp">
            <ImageView
                android:layout_width="0dp"
                android:layout_height="16dp"
                android:layout_weight="0.15"
                android:src="@drawable/ic_password"
                android:layout_gravity="center"/>
            <EditText
                android:id="@+id/edtNewPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:layout_weight="0.80"
                android:padding="@dimen/_3sdp"
                android:textSize="16sp"
                android:fontFamily="@font/montserrat_medium"
                android:inputType="textPassword"
                android:hint="@string/new_password"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:orientation="horizontal"
            android:background="@drawable/bg_edt"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp">
            <ImageView
                android:layout_width="0dp"
                android:layout_height="16dp"
                android:layout_weight="0.15"
                android:src="@drawable/ic_password"
                android:layout_gravity="center"/>
            <EditText
                android:id="@+id/edtConfirmPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:layout_weight="0.80"
                android:padding="@dimen/_3sdp"
                android:textSize="16sp"
                android:fontFamily="@font/montserrat_medium"
                android:inputType="textPassword"
                android:hint="@string/confirm_password"/>
        </LinearLayout>

        <Button
            style="@style/SOButton"
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:text="@string/submit"
            android:layout_marginTop="@dimen/_8sdp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>